data/src/main/java/com/example/data/network/error/UnknownException.kt
package com.example.data.network.error

class UnknownException: RuntimeException()